--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,22 @@
     <title>Weather App</title>
   </head>
   <body>
-    <img src="" alt="" />
+    <div class="temp">27</div>
+    <div class="desc">Mostly Clear</div>
+    <div class="details">
+      <div class="details__item">
+        <div class="details__icon"><img src="./images/pressure.svg" alt="" /></div>
+        <div class="details__num">720 hpa</div>
+      </div>
+      <div class="details__item">
+        <div class="details__icon"><img src="./images/humidity.svg" alt="" /></div>
+        <div class="details__num">45%</div>
+      </div>
+      <div class="details__item">
+        <div class="details__icon"><img src="./images/wind.svg" alt="" /></div>
+        <div class="details__num">5 m/h</div>
+      </div>
+    </div>
+    <img src="" alt="" id="weather-icon" />
   </body>
 </html>
