Add country input

--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,7 @@
     <title>Weather App</title>
   </head>
   <body>
+    <input type="text" class="country" />
     <div class="temp">
       <span></span>
       <div class="temp__unit">°C</div>
