--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,9 @@
     <title>Weather App</title>
   </head>
   <body>
-    <input type="text" class="country" />
+    <form>
+      <input type="text" class="city" />
+    </form>
     <div class="temp">
       <span></span>
       <div class="temp__unit">°C</div>
