Implement changing degree units

--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
     </form>
     <div class="temp">
       <span></span>
-      <div class="temp__unit">°C</div>
+      <div data-celsius="true" class="temp__unit">°C</div>
     </div>
     <div class="desc"></div>
     <div class="details">
